Why isn't activated being called on hashchange?

--- a/src/documents.html
+++ b/src/documents.html
@@ -50,6 +50,10 @@
       <option>4</option>
     </select>
 
+    <div if.bind="queryResultsPlaceholder">
+      <div>${queryResultsPlaceholder}</div>
+    </div>
+
 
   </section>
 </template>
